# MiniScope

./: README.md  pyproject.toml  requirements.txt
config/crawler/: config.toml
config/keyword/: prompt.toml
config/test/: test.toml
src/: CombinedAnalysis.py  main.py
src/dynamic/: Makefile  README.md  pyproject.toml
src/dynamic/config/crawler/: config.toml
src/dynamic/config/token/: token.toml
src/dynamic/pgc/: __init__.py
src/dynamic/pgc/builtins/: cv.py  dfs_for_pages.py  dfs_for_pp.py  oblpp.py  pagelyze.py  version.py
src/dynamic/pgc/builtins/context/: __init__.py  actions.py  manager.py
src/dynamic/pgc/builtins/elems/: copy.py  more.py  renter.py
src/dynamic/pgc/builtins/hooker/: __init__.py  config.py  isupload.py  script.js
src/dynamic/pgc/models/page/: nativepage.py  recorder.py  xwebpage.py
src/dynamic/pgc/models/point/: __init__.py
src/dynamic/pgc/utils/algorithm/: hashing.py  string.py
src/dynamic/pgc/utils/confman/: __init__.py
src/dynamic/pgc/utils/confman/app/: __init__.py
src/dynamic/pgc/utils/confman/pcy/: __init__.py
src/dynamic/pgc/utils/reqwx/: __init__.py  actions.py  config.py
src/dynamic/tests/: context.py  test_algo.py  test_context.py  test_cv.py  test_pagelyze.py  test_point.py  test_req.py  test_xwebpage.py
src/monitor/: __init__.py  addons.py  base.py  mitm.py  objection.py
src/nlp/LLM/: compose_ques.py  count_words.py  map_data_types.py
src/nlp/baseline models/: README.md  (+5 more)
src/static/: analyzer.py  config.py  main.py  mdg.py  miniapp.py
src/utils/: adb_cmd.py  testman.py  wxapkg.py  wxapp_about.py
(+64 files in other folders)
